- Fixed double registering of browscap ini directive. See bug #54896.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@311730 c90b9560-bf6c-de11-be94-00142212c4b1